# Store-OLAP-

./: .gitignore  README.md  main.py  pyproject.toml
api/: __init__.py  dependecies.py
api/endpoint/: analytics.py  main.py  products.py  stores.py
data/: products.csv  stores.csv
repository/: analytics.py  base.py  products.py  sales.py  stores.py
repository/db/: config.py  create_all.py  db.py  script.py
schema/: analytics.py  products.py  sales.py  stores.py
service/: analytics.py  products.py  stores.py
templates/: analysis.html  index.html  product.html  stores.html
