[tool.poetry]
name = "store olap"
version = "0.1.0"
description = ""
authors = ["Aidin <aidinror@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
pandas = "^2.2.3"
jinja2 = "^3.1.4"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
